[package]
name        = "adxl343"
description = "Platform-agnostic ADXL343 accelerometer driver which uses I2C via embedded-hal"
version     = "0.7.0"
authors     = ["Tony Arcieri <bascule@gmail.com>"]
license     = "Apache-2.0"
homepage    = "https://neobirth.org"
repository  = "https://github.com/NeoBirth/ADXL343.rs"
readme      = "README.md"
edition     = "2018"
categories  = ["embedded", "hardware-support", "no-std"]
keywords    = ["analog-devices", "accelerometer"]

[dependencies]
accelerometer = "0.10"
bitflags = "1"
embedded-hal = "0.2"

[features]
default = ["i16x3"]
i16x3 = []
u16x3 = []
